# GameEngine

./: Editor.py  README.md  launcher.py  main.cpp  main.py  platformergame.py  pyproject.toml  test.json  test1.py  utils.cpp  utils.h
data/: codes.txt  launcher_data.json  objectCreation.json
engineFeatures/: __init__.py  button.cpp  button.h  button.py  subscreen.cpp  subscreen.h  subscreen.py
gameObjects/: basic_nodes.py
gameObjects/math/: Vector2.py
launcher/: launcher.cpp  launcher.h
projects/1/: details.json
projects/2/: details.json
projects/3/: details.json
projects/game_test/: details.json
projects/main/: details.json
projects/new-test/: details.json
projects/test/: details.json
projects/test1/: details.json
projects/test2/: details.json
projects/testing-Launcherv1/: details.json
projects/testv2/: details.json
projects/thegreatestprojecttotocqoigzdhv/: details.json
runner/: __init__.py  runner.py
runner/gameObjects/: __init__.py  basic_nodes.py
runner/gameObjects/math/: Vector2.py  __init__.py
src/: GlobalDebugger.py  __init__.py  _net.py  main.py  tracker.txt  utils.py
src/assets/: animations.py  cache.py  images.py  text.py  tilemap.py
src/basics/: camera.py  input.py  shapes.py
src/devPace/: __init__.py  _net.py  main.py  tracker.txt
src/devPace/basics/: camera.py  input.py
src/helpers/: _tilemapEditor.py  _tilemap_files.py  utils.py
src/physics/: KinematicPlatform.py  StateManager.py  collisions.py  dynamicBody.py
tests/: game.json  platformergame.py  props.json  test.json
utils/: utils.cpp  utils.h
(+8 files in other folders)
