[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "devpace"
version = "1.1.0"
authors = [
  { name="Sam Fertig", email="sfertig007@gmail.com" },
]
description = "A growing game framework for pygame developement"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sfertig/GameEngine"
Issues = "https://github.com/sfertig/GameEngine/issues"